nesc-frontend/src/test/resources/integration/programs/bad/bad23/C.nc
/* A bare event not implemented. */

configuration C
{
}
implementation
{
   components M;
}
